[package]
name = "pitusya"
authors = ["Jujumba"]
repository = "https://github.com/Jujumba/pitusya"
description = "The Pitusya Programming Language"
version = "1.0.2"
edition = "2021"
license = "MIT"

[workspace]
members = ["pitusyastd"]

[dependencies]
libc = "0.2.146"
llvm-sys = "160.1.3"
regex = "1.8.3"

[profile.release]
strip = true