[package]
name = "pitusya"
authors = ["Jujumba"]
repository = "https://github.com/Jujumba/pitusya"
description = "The Pitusya Programming Language"
version = "1.0.4"
edition = "2021"
license = "MIT"

[dependencies]
llvm-sys = "160.1.3"
regex = "1.8.3"
pitusyastd = "0.0.1"
clap = { version = "4.3.22", features = ["derive"] }
colored = "2.0.4"

[profile.release]
strip = true
